# linear-regression

./: CMakeLists.txt  README.md
data/: CMakeLists.txt  main.cpp  parse_data.cpp  parse_data.h  parse_health_data.h  preprocessing.cpp  read_file.cpp  read_file.h
data/src/: main.cpp
health_data_ex/: CMakeLists.txt  main.cpp  parse_health_data.h
inference/: CMakeLists.txt
inference/src/: main.cpp
lin_reg/: CMakeLists.txt
lin_reg/include/: linear_regression.h
lin_reg/src/: main.cpp
linear-regression/: CMakeLists.txt
linear_regression/: CMakeLists.txt
linear_regression/include/: linear_regression.h
linear_regression/src/: main.cpp
train/: CMakeLists.txt
train/src/: main.cpp
